Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44778

QT Designer: Editing action text of existing action should not change object name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.5.0
    • 5.4.1
    • Tools: Designer
    • None
    • Mac OS X Yosemite 10.10.2 on MacBook Pro (Retina, 13-inch, late 2013).
    • 72d761ac303c97197de0ed965652859e35dc8e32 (qttools/5.5, 9.4.2015. 5.5)

    Description

      When first creating an action using the Action Editor, the object name is automatically completed based on the action text however, this behaviour should be disabled when editing a previously saved action as this might break code behind such as signal&slot connections.

      This behaviour seems to act slightly unpredictably as sometimes I had to select all text, edit the action text, switch input focus, switch focus back and clear once again. Now it seems to work every time I clear the text box with backspace.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            brokenthorn@gmail.com Manole Paul-Sebastian
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes