Qt Designer: Suppress updating of QAction's object name when editing existing actions.

Suppress the updating on clearing the text for existing actions
that have non-empty names initially.

Task-number: QTBUG-44778
Change-Id: Iedf59d5c8ac2ca356ed86774de677c6faf08afc7
Reviewed-by: Jarek Kobus <jaroslaw.kobus@theqtcompany.com>